--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -234,16 +234,7 @@ input{
 }
 
 .cad2 input{
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
-    margin-top: 50px;
-    width: 300px;
-    height: 40px;
-    text-align: center;
-    font-size: 15px;
-    border-radius: 15px;
-    background: #EBD9E8 40%;
-    border: 0;
+    
 }
 .cad2 {
     font-family: 'Poppins', sans-serif;
@@ -255,6 +246,23 @@ input{
     font-size: 15px;
     border-radius: 15px;
     border: 0;
+}
+.cad2 button{
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    margin-top: 50px;
+    width: 300px;
+    height: 40px;
+    text-align: center;
+    font-size: 15px;
+    border-radius: 15px;
+    background: #000000 40%;
+    color: #FFFFFF;
+    border: none
+}
+.cad2 button:hover {
+    background:  #EBD9E8 40%;
+    color: #000000
 }
 
 .cad3 button{
